Fixed overlapping home section

--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,6 @@ html {
 }
 
 body {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
@@ -16,10 +13,6 @@ body {
   font-weight: 400;
   color: #fff;
   background: #000;
-}
-
-main {
-  flex: 1;
 }
 
 /*===================================*
@@ -102,6 +95,12 @@ h6,
   padding-bottom: 4.5em;
 }
 
+@media only screen and (max-width: 1200px), (max-height: 500px) {
+  #home {
+    height: 100%;
+    padding: 120px 0;
+  }
+}
 #home h1 {
   font-weight: 700;
   font-variant-ligatures: common-ligatures;
